# usb_800x480_RGBLCD

./: .gitignore  ATK-MD0430R模块使用说明_V1.0.md  ATK-MD0430R模块用户手册_V1.1.md  CMakeLists.txt  README airi.md  README.md  airi需求文档.md  esp32-p4_datasheet_.md  esp32p4_v1_fix_summary.md  fps_stress_test.py  jpeg_stress_test.py  package.json  play_audio.py  play_jpeg_frames.py  play_video.py  screen_stream_mutter.py  screen_stream_portal.py  screen_stream_portal.ts  screen_stream_windows.py  sdkconfig  test_vendor.py  usb.d.ts  window_crop_helper.py
.claude/: settings.json
components/BSP/: CMakeLists.txt
components/BSP/ES8388/: es8388.c  es8388.h
components/BSP/LCD/: lcd.c  lcd.h  mipi_lcd.c  rgblcd.c
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.c
components/BSP/XL9555/: xl9555.c  xl9555.h
docs/: DEVELOPMENT_PLAN_B.md  README.md  TEAM_ASSIGNMENT.md  audio_development.md  esp32-p4-integration.md
docs/team/original/: 01_MEMBER_A_BUS_MASTER.md  02_MEMBER_B_FRAME_ARCHITECT.md  03_MEMBER_C_INTERFACE_GUARDIAN.md  04_MEMBER_DE.md
docs/team/reports/: 01_MEMBER_A_BUS_MASTER_汇报.md  02_MEMBER_B_FRAME_ARCHITECT_汇报.md  03_MEMBER_C_INTERFACE_GUARDIAN_汇报.md  04_MEMBER_DE_汇报.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: app_config.h  app_hid.c  app_hid.h  app_lcd.c  app_lcd.h  app_uac.c  app_uac.h  app_usb.c  app_usb.h  app_vendor.c  app_vendor.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_frame.c  usb_frame.h
main/UAC/: tusb_config_uac.h  uac_config.h  usb_device_uac.c
